[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
features = "0.10.0"
hyper = {version = "1.5.1", features = ["full"]}
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }